# rust-study

./: Cargo.toml  README.md  install-cargo.sh
game/: Cargo.toml
game/config/: log4rs.yaml
game/src/: main.rs
game/src/applications/: get_rooms_use_case.rs
game/src/domains/: mod.rs
game/src/domains/rooms/: mod.rs
game/src/domains/rooms/repositories/: room_repository.rs
game/src/hosting/: console_hosted_service.rs  hosted_service.rs  mod.rs
game/src/infrastructures/: mod.rs  room_repository.rs
game/src/presentations/: mod.rs
game/src/presentations/console/: console_controller.rs  mod.rs
game/src/presentations/consoles/: ConsoleController.rs
src/: commands.rs  game.rs  main.rs  week3.rs
study/: Cargo.toml
study/src/: commands.rs  game.rs  main.rs  week1.rs  week2.rs  week4.rs  week5.rs  week6.rs  week7.rs  week8.rs
study/src/week4/: foo.rs
