[package]
name = "study"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.10.4"
console = "0.15.7"
thiserror = "1.0.47"
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["blocking"] }
scraper = "0.17.1"
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["macros"] }
async-trait = "0.1.73"